# thor_mang_common

./: README.md
thor_mang_description/: CMakeLists.txt  package.xml
thor_mang_description/hands/: l_stump.urdf.xacro  l_thor_mang_hand.urdf.xacro  l_vt_hand.urdf.xacro  r_stump.urdf.xacro  r_vt_hand.urdf.xacro
thor_mang_description/launch/: real_robot.launch  xacrodisplay_common.launch  xacrodisplay_thor_mang.launch  xacrodisplay_thor_mang_left_arm_standalone.launch  xacrodisplay_thor_mang_simple.launch  xacrodisplay_thor_mang_tud.launch  xacrodisplay_urdf.launch
thor_mang_description/meshes/simple/: foot_left.stl  head.stl  hip_yaw_left.stl  leg_left.stl  thor_mang_hand.stl  wrist_roll.stl  wrist_roll_left.stl
thor_mang_description/meshes/visual/: ankle_roll_left.stl  elbow_left.stl  hip_pitch_left.stl  pelvis_scaled.stl  wrist_yaw_left.stl
thor_mang_description/robots/: README.md  thor_mang_default.urdf.xacro  thor_mang_hands_tud_simple.urdf.xacro  thor_mang_left_arm_standalone.urdf.xacro  thor_mang_simple.urdf.xacro  thor_mang_tud.urdf.xacro  thor_mang_tud.urdf.xacro.xml  thor_mang_tud_joint_offsets.urdf.xacro.xml  thor_mang_tud_simple.urdf.xacro  thor_mang_tud_simple.urdf.xacro.xml  thor_mang_tud_simple.urdf.xacro_tmp.xml  thor_mang_tud_vt_hands.urdf.xacro  thor_mang_zero_offsets.urdf.xacro.xml
thor_mang_description/rviz/: xacrodisplay.rviz
thor_mang_description/urdf/: README.md  constants.xacro  helper_macros.urdf.xacro.xml  joint_params.xacro  thor_mang_mesh_collision_geoms.urdf.xacro.xml  thor_mang_mesh_visual_geoms.urdf.xacro.xml  thor_mang_primitive_collision_geoms.urdf.xacro.xml  thor_mang_simple_mesh_visual_geoms.urdf.xacro.xml  thor_poking_stick.urdf.xacro
thor_mang_description/urdf/arm/: thor_arm_6dof_simple.urdf.xacro  thor_arm_7dof.urdf.xacro  thor_arm_7dof_mesh_visual_geoms.urdf.xacro.xml  thor_arm_7dof_simple.urdf.xacro  thor_arm_7dof_simple_mesh_collision_geoms.urdf.xacro.xml  thor_arm_7dof_simple_mesh_visual_geoms.urdf.xacro.xml  thor_arm_7dof_simple_primitive_collision_geoms.urdf.xacro.xml
thor_mang_description/urdf/hands/: r_thor_mang_hand.urdf.xacro  thor_mang_hand.urdf.xacro
thor_mang_description/urdf/head/: generic_camera.urdf.xacro.xml  thor_head_pan_tilt_unit.urdf.xacro.xml  thor_hector_multisensor_head.xml  (+6 more)
thor_mang_utils/: CMakeLists.txt  package.xml
thor_mang_utils/src/: goto_ready_stance.py
(+21 files in other folders)
