<?xml version="1.0"?>
<package>
  <name>thor_mang_description</name>
  <version>0.0.0</version>
  <description>The thor_mang_description package provides a modular, xacro based URDF description of the thor_mang robot</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  
  <author>Stefan Kohlbrecher</author>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
