<?xml version="1.0"?>
<package>
  <name>thor_mang_utils</name>
  <version>0.0.0</version>
  <description>The thor_mang_utils package provides utilities for use with the thor-mang robot.</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author     email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>